--- a/application/package.json
+++ b/application/package.json
@@ -5,8 +5,13 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.10",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.4.0",
         "vite": "^4.0.0"
     }
 }
